# career_pilot

./: .gitignore  main.py  pyproject.toml
notebooks/: test_cv_analyzer.ipynb  test_cv_parser.ipynb  test_database.ipynb  test_graph.ipynb  test_llm.ipynb
scripts/: add_more_jobs.py  scrape_topcv_jobs.py
src/career_pilot/: main.py
src/career_pilot/agents/: __init__.py  cv_analyzer.py  job_matcher.py  models.py  router.py
src/career_pilot/core/: config.py  database.py  llm.py
src/career_pilot/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/career_pilot/prompts/: __init__.py  prompt_templates.py
src/career_pilot/tools/: cv_parser.py  playwright_scraper.py  vector_store.py  web_scraper.py
src/career_pilot/ui/: app.py  components.py  styles.py
test/: test_graph.py  test_playwright_scraper.py  test_router.py
