[project]
name = "career-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
