[project]
name = "career-pilot"
version = "0.1.0"
description = "AI Career Assistant - CV analysis, job matching, skill gap, mock interview"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "gradio>=4.0.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "pypdf>=6.9.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
